<resources>
    <string name="app_name">clase3108</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_world">Hola mundo desde archivo string</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Strings for calculator-->
    <string name="number_1">Número 1</string>
    <string name="number_2">Número 2</string>
    <string name="calculate">Calcular</string>
    <string name="sum">Suma</string>
    <string name="substract">Resta</string>
    <string name="divide">Dividir</string>
    <string name="multiply">Multiplicar</string>
    <string name="none">Ninguno</string>
    <string name="result">Resultado</string>
    <string name="response">Respuesta</string>





</resources>